--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Projects</a></li>
 							<li><a href="generic.html">About Me</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li><a href="elements.html">Resume</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/adamconrad7/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
@@ -51,15 +51,13 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									<h2><a href="#">Wildfire Response Model</a></h2>
+									<p>An end-to-end machine learning classifier that predicts the National Wildfire Prepardness Level (NWPL) for the northwest region.
+									Scrapes training data from NOAA weather stations around the region. 96% accurate in predicting NWPL.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/forest-fire.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="#" class="button large">Full Story</a></li>
+									<li><a href="https://github.com/adamconrad7/Fire-response-model" class="button large">Source Code</a></li>
 								</ul>
 							</article>
 
