--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">I love abbi thompson soooooo much!!</a></h2>
+									<h2><a href="#">epep</a></h2>
 									<p>An end-to-end machine learning classifier that predicts the National Wildfire Prepardness Level (NWPL) for the northwest region.
 									Scrapes training data from NOAA weather stations around the region. 96% accurate in predicting NWPL.</p>
 								</header>
@@ -63,6 +63,18 @@
 
 						<!-- Posts -->
 							<section class="posts">
+								<article class="post featured">
+									<header class="major">
+										<!-- <span class="date">April 25, 2017</span> -->
+										<h2><a href="#">Wildfire Response Model</a></h2>
+										<p>An end-to-end machine learning classifier that predicts the National Wildfire Prepardness Level (NWPL) for the northwest region.
+										Scrapes training data from NOAA weather stations around the region. 96% accurate in predicting NWPL.</p>
+									</header>
+									<a href="#" class="image main"><img src="images/forest-fire.png" alt="" /></a>
+									<ul class="actions special">
+										<li><a href="https://github.com/adamconrad7/Fire-response-model" class="button large">Source Code</a></li>
+									</ul>
+								</article>
 								<article>
 									<header>
 										<h2><a href="#">Naive-Bayes Classifier</a></h2>
