--- a/index.html
+++ b/index.html
@@ -51,42 +51,29 @@
 							<article class="post featured">
 								<header class="major">
 									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">Wildfire Response Model</a></h2>
-									<p>An end-to-end machine learning classifier that predicts the National Wildfire Prepardness Level (NWPL) for the northwest region.
-									Scrapes training data from NOAA weather stations around the region. 96% accurate in predicting NWPL.</p>
+									<h2><a href="#">Tree Segmentation from Aerial Imagery</a></h2>
+									<p>Taking inventory of forests is an expensive and time consuming task that requires a specialist to manually inspect forests to count and identify the trees.  To address this, we aim to locate saplings from aerial images of forests in Western Oregon. To do so, we combined two separate approaches. The first is the segmentation of the image according to spatial and reflectance attributes using a technique called simple linear iterative clustering. One of these segments is selected based on its similarity to images labeled as saplings. Next, a convolutional neural network is trained on images of saplings and instances of other features common to the landscape. We then classify each component of the selected segment, returning the coordinates of those identified as saplings.
+									.</p>
 								</header>
 								<a href="#" class="image main"><img src="images/forest-fire.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/adamconrad7/Fire-response-model" class="button large">Source Code</a></li>
+									<li><a href="https://github.com/adamconrad7/Tree-Segmentation" class="button large">Source Code</a></li>
 								</ul>
 							</article>
-							<article class="post featured">
-								<header class="major">
-									<!-- <span class="date">April 25, 2017</span> -->
-									<h2><a href="#">Wildfire Response Model</a></h2>
-									<p>An end-to-end machine learning classifier that predicts the National Wildfire Prepardness Level (NWPL) for the northwest region.
-									Scrapes training data from NOAA weather stations around the region. 96% accurate in predicting NWPL.</p>
-								</header>
-								<a href="#" class="image main"><img src="images/forest-fire.png" alt="" /></a>
-								<ul class="actions special">
-									<li><a href="https://github.com/adamconrad7/Fire-response-model" class="button large">Source Code</a></li>
-								</ul>
-							</article>
+							<header class="major">
+								<!-- <span class="date">April 25, 2017</span> -->
+								<h2><a href="#">Wildfire Response Model</a></h2>
+								<p>An end-to-end machine learning classifier that predicts the National Wildfire Prepardness Level (NWPL) for the northwest region.
+								Scrapes training data from NOAA weather stations around the region. 96% accurate in predicting NWPL.</p>
+							</header>
+							<a href="#" class="image main"><img src="images/forest-fire.png" alt="" /></a>
+							<ul class="actions special">
+								<li><a href="https://github.com/adamconrad7/Fire-response-model" class="button large">Source Code</a></li>
+							</ul>
+						</article>
 
 						<!-- Posts -->
 							<section class="posts">
-								<article class="post featured">
-									<header class="major">
-										<!-- <span class="date">April 25, 2017</span> -->
-										<h2><a href="#">Wildfire Response Model</a></h2>
-										<p>An end-to-end machine learning classifier that predicts the National Wildfire Prepardness Level (NWPL) for the northwest region.
-										Scrapes training data from NOAA weather stations around the region. 96% accurate in predicting NWPL.</p>
-									</header>
-									<a href="#" class="image main"><img src="images/forest-fire.png" alt="" /></a>
-									<ul class="actions special">
-										<li><a href="https://github.com/adamconrad7/Fire-response-model" class="button large">Source Code</a></li>
-									</ul>
-								</article>
 								<article>
 									<header>
 										<h2><a href="#">Naive-Bayes Classifier</a></h2>
