--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 									<p>Taking inventory of forests is an expensive and time consuming task that requires a specialist to manually inspect forests to count and identify the trees.  To address this, we aim to locate saplings from aerial images of forests in Western Oregon. To do so, we combined two separate approaches. The first is the segmentation of the image according to spatial and reflectance attributes using a technique called simple linear iterative clustering. One of these segments is selected based on its similarity to images labeled as saplings. Next, a convolutional neural network is trained on images of saplings and instances of other features common to the landscape. We then classify each component of the selected segment, returning the coordinates of those identified as saplings.
 									.</p>
 								</header>
-								<a href="#" class="image main"><img src="images/forest-fire.png" alt="" /></a>
+								<a href="#" class="image main"><img src="images/forest.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="https://github.com/adamconrad7/Tree-Segmentation" class="button large">Source Code</a></li>
 								</ul>
