--- a/generic.html
+++ b/generic.html
@@ -56,7 +56,7 @@
 
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">conraada@oregonstate.edu</a></p>
+								<p><a href="#">adamconrad720@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
