--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Intro -->
 					<div id="intro">
-						<h1>Adam Coonrad</h1>
+						<h1>Adam Conrad</h1>
 						<p>A results-driven developer with a passion for data science</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
@@ -107,7 +107,7 @@
 
 							<section>
 								<h3>Email</h3>
-								<p><a href="#">conraada@oregonstate.edu</a></p>
+								<p><a href="#">adamconrad720@gmail.com</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
@@ -120,9 +120,7 @@
 					</footer>
 
 				<!-- Copyright -->
-					<div id="copyright">
-						<ul><li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li></ul>
-					</div>
+			
 
 			</div>
 
