Added headshot and updated bio

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1>Adam Conrad</h1>
-						<p>A results-driven developer with a passion for data science</p>
+						<p>A results-driven developer with a passion for all things data</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
